feat: add header

--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
 .title {
+    color: aliceblue;
+}
+.header {
     background-image: url(img/pattern.png);
+    height: 100px;
+    background-color: #4EA0FF;
+
 }
