feat: add 2 section (tabella) e aggiunti commenti

--- a/style.css
+++ b/style.css
@@ -30,3 +30,23 @@
     height: auto;
 }
 
+table {
+    width: 100%;
+    border-collapse: collapse;
+    margin: 20px 0;
+}
+
+thead {
+    background-color: #20A9E5; 
+    color: white;
+}
+
+th, td {
+    padding: 10px;
+    text-align: left;
+    border: 1px solid #ddd;
+}
+
+tbody tr:nth-child(odd) {
+    background-color: #B1E5F2;
+}
