--- a/style.css
+++ b/style.css
@@ -50,3 +50,23 @@ th, td {
 tbody tr:nth-child(odd) {
     background-color: #B1E5F2;
 }
+
+.related-title {
+    font-weight: bold;
+    margin-top: 20px;
+    color: #808080;
+}
+
+.related-h2{
+    color: #808080;
+    background-image: url(img/monitor.jpg);
+    height: 200px;
+    background-repeat: no-repeat;
+}
+.related-h3{
+    color: #808080;
+    height: 200px;
+    background-image: url(img/graph.jpg);
+    background-repeat: no-repeat;
+}
+
